Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-webapp
  namespace: ivolve-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ivolve-webapp
  template:
    metadata:
      labels:
        app: ivolve-webapp
    spec:
      containers:
      - name: ivolve-webapp
        image: hagert/ivolve-webapp:latest
        imagePullPolicy: Always 
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - mountPath: "/app/data"
          name: ivolve-data
      volumes:
      - name: ivolve-data
        persistentVolumeClaim:
          claimName: ivolve-webapp-pvc
