Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ivolve-webapp-ingress
  namespace: ivolve-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ivolve-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ivolve-webapp-service
            port:
              number: 80
